fix segno and coda font and text

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -100,8 +100,8 @@ else()
 endif()
 
 execute_process(
-    COMMAND ../tools/get_git_commit.sh
-    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+    COMMAND sh ../tools/get_git_commit.sh
+    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
     OUTPUT_VARIABLE GIT_COMMIT
 )
 
